deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-node-app

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: my-node-app

  template:
    metadata:
      labels:
        app: my-node-app

    spec:
      containers:
        - name: my-node-app

          image: 702358135571.dkr.ecr.us-east-1.amazonaws.com/my-node-app:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000

            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000

            initialDelaySeconds: 15
            periodSeconds: 10
