service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: my-node-app
  ports:
    - port: 80
      targetPort: 3000
